# skillbox-c-plus-plus_32.5.2

./: CMakeLists.txt  myprogram.cpp
